--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ targetCompatibility = 1.8
 // Use as maven groupId/artifactId/version
 group = 'com.coder4.sbmvt'
 project.archivesBaseName = 'sbmvt-thrift-server'
-project.version = '0.0.1'
+project.version = '0.0.2'
 
 // source & javadoc pom
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -25,7 +25,7 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka:1.3.1.RELEASE'
+    compileOnly 'org.springframework.cloud:spring-cloud-starter-eureka:1.3.1.RELEASE'
     compileOnly 'org.apache.thrift:libthrift:0.9.3'
 
     testCompileOnly 'junit:junit:4.12'
